--- a/course-1/base-course-1.html
+++ b/course-1/base-course-1.html
@@ -3,61 +3,60 @@
 <head>
   <meta charset="UTF-8" />
   <title>Base Course 1 - Free</title>
-</head>
-<body>
-  <h1>Base Course 1 (Free Content)</h1>
-  <p>This is the free version of Course 1.</p>
-
-  <div id="action-btn">
-    <p>Checking your access...</p>
-  </div>
-
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
     import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
-    import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
+    import { getFirestore, doc, setDoc, updateDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
 
-    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
       authDomain: "syncskilll.firebaseapp.com",
       projectId: "syncskilll",
-      storageBucket: "syncskilll.appspot.com",
+      storageBucket: "syncskilll.firebasestorage.app",
       messagingSenderId: "203322315096",
-      appId: "1:203322315096:web:958fc7d94806ef9a98552d"
+      appId: "1:203322315096:web:958fc7d94806ef9a98552d",
+      measurementId: "G-JWWWM2ZQSK"
     };
 
-    // Init Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    // Elements
-    const btnContainer = document.getElementById('action-btn');
+    let currentUser = null;
 
-    onAuthStateChanged(auth, async (user) => {
+    onAuthStateChanged(auth, (user) => {
       if (!user) {
         window.location.href = '/login.html';
         return;
       }
+      currentUser = user;
+    });
+
+    async function payNow() {
+      if (!currentUser) {
+        alert('User not authenticated!');
+        return;
+      }
 
       try {
-        const paymentRef = doc(db, 'payments', user.uid);
-        const paymentSnap = await getDoc(paymentRef);
+        // Simulate payment success - update Firestore payment document for this user
+        const paymentRef = doc(db, 'payments', currentUser.uid);
 
-        const courses = paymentSnap.exists() && paymentSnap.data().courses;
-        const isPaid = courses && courses.course1 === true;
+        // Update the course1 payment to true
+        await setDoc(paymentRef, { courses: { course1: true } }, { merge: true });
 
-        if (isPaid) {
-          btnContainer.innerHTML = `<button onclick="window.location.href='premium-course-1.html'">✅ View Premium Course</button>`;
-        } else {
-          btnContainer.innerHTML = `<button onclick="window.location.href='payment.html'">💰 Pay to Unlock Premium Course</button>`;
-        }
+        alert('Payment successful! Redirecting to premium course...');
+        window.location.href = './premium-course-1.html';
       } catch (error) {
-        btnContainer.innerHTML = `<p style="color:red;">Error checking payment status.</p>`;
-        console.error("Error fetching payment data:", error);
+        console.error('Payment failed:', error);
+        alert('Payment failed. Please try again.');
       }
-    });
+    }
   </script>
+</head>
+<body>
+  <h1>Base Course 1 (Free Content)</h1>
+  <p>This is the free version of Course 1.</p>
+  <button onclick="payNow()">Pay to unlock premium course</button>
 </body>
 </html>
