--- a/signup.html
+++ b/signup.html
@@ -699,7 +699,7 @@ label {
           document.getElementById('username').textContent = user.displayName || user.email;
           document.getElementById('success-message').style.display = 'block';
           setTimeout(() => {
-            window.location.href = 'courses.html';
+            window.location.href = 'dashboard.html';
           }, 1000);
         }
       });
