--- a/course-1/base-course-1.html
+++ b/course-1/base-course-1.html
@@ -57,6 +57,6 @@
 <body>
   <h1>Base Course 1 (Free Content)</h1>
   <p>This is the free version of Course 1.</p>
-  <button onclick="payNow()">Pay to unlock premium course</button>
+<button onclick="window.location.href = './payment.html'">Pay to unlock premium course</button>
 </body>
 </html>
