--- a/user.html
+++ b/user.html
@@ -1666,7 +1666,8 @@ button:focus, a:focus {
 <div class="center-wrapper">
   <div class="responsive-element">
     <div class="text-content">
-<h1 id="welcomeHeading">Hie, <span id="user" style="color: #ff9b00;"></span></h1>
+    
+<h1 id="welcomeHeading" style="color: #ff9b00;>Hie</h1>
       <h1>Become Top 1% in the AI-First World</h1>
       <p>Whether it is Product, Growth, Design, Business, Tech or Data, Syncskill is the place to learn from top experts in the field to become the Top 1%</p>
       <button class="explore-button">
@@ -3517,7 +3518,7 @@ body {
         window.location.href = 'login.html';
         return;
       }
-      document.getElementById('welcome').textContent = `Welcome, ${user.displayName || user.email}`;
+      document.getElementById('welcomeHeading').textContent = `Hie, ${user.displayName || user.email}`;
     });
 
     window.logout = async () => {
