--- a/login.html
+++ b/login.html
@@ -683,7 +683,7 @@ label {
           document.getElementById('username').textContent = user.displayName || user.email;
           document.getElementById('success-message').style.display = 'block';
           setTimeout(() => {
-            window.location.href = 'dashboard.html';
+            window.location.href = 'user.html';
           }, 1000);
         }
       });
