--- a/login.html
+++ b/login.html
@@ -659,164 +659,100 @@ label {
       </p>
     </div>
 
-    <script type="module">
-      import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
-      import { getAuth, signInWithPopup, GoogleAuthProvider, signInWithEmailAndPassword, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
+ import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
+import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
 
-      const firebaseConfig = {
-        apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
-        authDomain: "syncskilll.firebaseapp.com",
-        projectId: "syncskilll",
-        storageBucket: "syncskilll.firebasestorage.app",
-        messagingSenderId: "203322315096",
-        appId: "1:203322315096:web:958fc7d94806ef9a98552d",
-        measurementId: "G-JWWWM2ZQSK"
-      };
+const firebaseConfig = {
+  apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
+  authDomain: "syncskilll.firebaseapp.com",
+  projectId: "syncskilll",
+  storageBucket: "syncskilll.firebasestorage.app",
+  messagingSenderId: "203322315096",
+  appId: "1:203322315096:web:958fc7d94806ef9a98552d",
+  measurementId: "G-JWWWM2ZQSK"
+};
 
-      const app = initializeApp(firebaseConfig);
-      const auth = getAuth(app);
-      const provider = new GoogleAuthProvider();
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
 
-      // On page load, redirect if already logged in
-      onAuthStateChanged(auth, user => {
-        if (user) {
-          document.getElementById('username').textContent = user.displayName || user.email;
-          document.getElementById('success-message').style.display = 'block';
-          setTimeout(() => {
-            window.location.href = 'user.html';
-          }, 1000);
-        }
-      });
+// DOM elements for user profile
+const elements = {
+  userAvatar: document.getElementById('userAvatar'),
+  mobileUserAvatar: document.getElementById('mobileUserAvatar'),
+  userName: document.getElementById('userName'),
+  dropdownAvatar: document.getElementById('dropdownAvatar'),
+  dropdownName: document.getElementById('dropdownName'),
+  dropdownEmail: document.getElementById('dropdownEmail'),
+  mobileUserName: document.getElementById('mobileUserName'),
+  mobileUserEmail: document.getElementById('mobileUserEmail'),
+  welcomeUserSpan: document.getElementById('user')
+};
 
-      // Google Sign In
-      window.googleSignIn = async () => {
-        const googleButton = document.getElementById('google-signin');
-        const form = document.getElementById('login-form');
-        const overlay = document.getElementById('loading-overlay');
-        const errorMessage = document.getElementById('error-message');
+// Clear sensitive data from DOM
+const clearUserProfile = () => {
+  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+  try {
+    if (elements.userName) elements.userName.textContent = '';
+    if (elements.dropdownName) elements.dropdownName.textContent = '';
+    if (elements.mobileUserName) elements.mobileUserName.textContent = '';
+    if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
+    if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
+    if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
 
-        googleButton.classList.add('loading-button');
-        googleButton.querySelector('.spinner').style.display = 'block';
-        form.classList.add('form-disabled');
-        overlay.style.display = 'flex';
+    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
+      if (img) {
+        img.src = fallbackAvatar;
+        img.removeAttribute('srcset');
+      }
+    });
+  } catch (error) {
+    console.error('Error clearing profile:', error);
+  }
+};
 
-        try {
-          await signInWithPopup(auth, provider);
-          // Success message and redirect handled by onAuthStateChanged
-        } catch (err) {
-          errorMessage.textContent = 'Google sign-in failed: ' + err.message;
-          errorMessage.style.display = 'block';
-          googleButton.classList.remove('loading-button');
-          googleButton.querySelector('.spinner').style.display = 'none';
-          form.classList.remove('form-disabled');
-          overlay.style.display = 'none';
-        }
-      };
+// Update user profile on the page
+const updateUserProfile = (user) => {
+  if (!user) {
+    clearUserProfile();
+    return;
+  }
 
-      // Email/Password Sign In
-      window.emailSignIn = async (e) => {
-        e.preventDefault();
-        const loginButton = e.target.querySelector('button[type="submit"]');
-        const form = document.getElementById('login-form');
-        const overlay = document.getElementById('loading-overlay');
-        const errorMessage = document.getElementById('error-message');
-        const email = e.target.email.value.trim();
-        const password = e.target.password.value;
+  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+  const displayName = user.displayName || user.email?.split('@')[0] || 'User';
+  const email = user.email || 'No email provided';
+  const photoURL = user.photoURL || fallbackAvatar;
 
-        if (!email || !password) {
-          errorMessage.textContent = 'Please enter email and password.';
-          errorMessage.style.display = 'block';
-          return;
-        }
+  try {
+    if (elements.userName) elements.userName.textContent = displayName;
+    if (elements.dropdownName) elements.dropdownName.textContent = displayName;
+    if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
+    if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
+    if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
+    if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
 
-        loginButton.classList.add('loading-button');
-        loginButton.querySelector('.spinner').style.display = 'block';
-        form.classList.add('form-disabled');
-        overlay.style.display = 'flex';
+    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
+      if (img) {
+        img.src = photoURL;
+        img.onerror = () => img.src = fallbackAvatar;
+      }
+    });
+  } catch (error) {
+    console.error('Profile update error:', error);
+  }
+};
 
-        try {
-          await signInWithEmailAndPassword(auth, email, password);
-          // Success message and redirect handled by onAuthStateChanged
-        } catch (err) {
-          errorMessage.textContent = 'Email sign-in failed: ' + err.message;
-          errorMessage.style.display = 'block';
-          loginButton.classList.remove('loading-button');
-          loginButton.querySelector('.spinner').style.display = 'none';
-          form.classList.remove('form-disabled');
-          overlay.style.display = 'none';
-        }
-      };
+// Listen for auth state changes and update profile
+onAuthStateChanged(auth, (user) => {
+  if (user) {
+ updateUserProfile(user);
+  } else {
+    clearUserProfile();
+    // Optionally redirect to login page if user is not authenticated
+    // window.location.href = 'login.html';
+  }
+});
 
-      // Attach emailSignIn to form submission
-      document.getElementById('login-form').addEventListener('submit', window.emailSignIn);
-
-
-
-
-       // DOM elements
-  const elements = {
-    userAvatar: document.getElementById('userAvatar'),
-    mobileUserAvatar: document.getElementById('mobileUserAvatar'),
-    userName: document.getElementById('userName'),
-    dropdownAvatar: document.getElementById('dropdownAvatar'),
-    dropdownName: document.getElementById('dropdownName'),
-    dropdownEmail: document.getElementById('dropdownEmail'),
-    mobileUserName: document.getElementById('mobileUserName'),
-    mobileUserEmail: document.getElementById('mobileUserEmail'),
-    welcomeUserSpan: document.getElementById('user')
-  };
-
-  // Clear sensitive data from DOM
-  const clearUserProfile = () => {
-    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-    try {
-      if (elements.userName) elements.userName.textContent = '';
-      if (elements.dropdownName) elements.dropdownName.textContent = '';
-      if (elements.mobileUserName) elements.mobileUserName.textContent = '';
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
-
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = fallbackAvatar;
-          img.removeAttribute('srcset'); // Clear any cached image sources
-        }
-      });
-    } catch (error) {
-      console.error('Error clearing profile:', error);
-    }
-  };
-        // Update user profile on the page
-  const updateUserProfile = (user) => {
-    if (!user) {
-      clearUserProfile();
-      return;
-    }
-
-    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-    const displayName = user.displayName || user.email?.split('@')[0] || 'User';
-    const email = user.email || 'No email provided';
-    const photoURL = user.photoURL || fallbackAvatar;
-
-    try {
-      if (elements.userName) elements.userName.textContent = displayName;
-      if (elements.dropdownName) elements.dropdownName.textContent = displayName;
-      if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
-
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = photoURL;
-          img.onerror = () => img.src = fallbackAvatar;
-        }
-      });
-    } catch (error) {
-      console.error('Profile update error:', error);
-    }
-  };
-    </script>
+// Export auth for logout functionality
+export { auth };
   </body>
 </html>
