--- a/login.html
+++ b/login.html
@@ -660,15 +660,14 @@ label {
     </div>
 
     <script type="module">
-
 import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
-import { getAuth, signInWithPopup, GoogleAuthProvider, signInWithEmailAndPassword, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
+import { getAuth, signInWithPopup, GoogleAuthProvider, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
 
 const firebaseConfig = {
   apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
   authDomain: "syncskilll.firebaseapp.com",
   projectId: "syncskilll",
-  storageBucket: "syncskilll.firebasestorage.app",
+  storageBucket: "syncskilll.appspot.com",
   messagingSenderId: "203322315096",
   appId: "1:203322315096:web:958fc7d94806ef9a98552d",
   measurementId: "G-JWWWM2ZQSK"
@@ -677,76 +676,6 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const provider = new GoogleAuthProvider();
-
-// DOM elements for user profile
-const elements = {
-  userAvatar: document.getElementById('userAvatar'),
-  mobileUserAvatar: document.getElementById('mobileUserAvatar'),
-  userName: document.getElementById('userName'),
-  dropdownAvatar: document.getElementById('dropdownAvatar'),
-  dropdownName: document.getElementById('dropdownName'),
-  dropdownEmail: document.getElementById('dropdownEmail'),
-  mobileUserName: document.getElementById('mobileUserName'),
-  mobileUserEmail: document.getElementById('mobileUserEmail'),
-  welcomeUserSpan: document.getElementById('user')
-};
-
-// Clear sensitive data from DOM
-const clearUserProfile = () => {
-  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-  try {
-    if (elements.userName) elements.userName.textContent = '';
-    if (elements.dropdownName) elements.dropdownName.textContent = '';
-    if (elements.mobileUserName) elements.mobileUserName.textContent = '';
-    if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
-    if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
-    if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
-
-    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-      if (img) {
-        img.src = fallbackAvatar;
-        img.removeAttribute('srcset');
-      }
-    });
-  } catch (error) {
-    console.error('Error clearing profile:', error);
-  }
-};
-
-// Update user profile on the page
-const updateUserProfile = (user) => {
-  if (!user) {
-    clearUserProfile();
-    return;
-  }
-
-  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-  const displayName = user.displayName || user.email?.split('@')[0] || 'User';
-  const email = user.email || 'No email provided';
-  const photoURL = user.photoURL || fallbackAvatar;
-
-  try {
-    if (elements.userName) elements.userName.textContent = displayName;
-    if (elements.dropdownName) elements.dropdownName.textContent = displayName;
-    if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
-    if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
-    if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
-    if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
-
-    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-      if (img) {
-        img.src = photoURL;
-        img.onerror = () => img.src = fallbackAvatar;
-      }
-    });
-  } catch (error) {
-    console.error('Profile update error:', error);
-    if (elements.dropdownEmail) {
-      elements.dropdownEmail.textContent = 'Error loading profile';
-      elements.dropdownEmail.style.color = '#dc2626';
-    }
-  }
-};
 
 // Google Sign In
 window.googleSignIn = async () => {
@@ -762,7 +691,14 @@ window.googleSignIn = async () => {
 
   try {
     await signInWithPopup(auth, provider);
-    // Success message and redirect handled by onAuthStateChanged
+    const usernameElement = document.getElementById('username');
+    if (usernameElement) {
+      usernameElement.textContent = auth.currentUser.displayName || auth.currentUser.email;
+    }
+    document.getElementById('success-message').style.display = 'block';
+    setTimeout(() => {
+      window.location.href = 'user.html';
+    }, 1000);
   } catch (err) {
     errorMessage.textContent = 'Google sign-in failed: ' + err.message;
     errorMessage.style.display = 'block';
@@ -796,7 +732,14 @@ window.emailSignIn = async (e) => {
 
   try {
     await signInWithEmailAndPassword(auth, email, password);
-    // Success message and redirect handled by onAuthStateChanged
+    const usernameElement = document.getElementById('username');
+    if (usernameElement) {
+      usernameElement.textContent = auth.currentUser.displayName || auth.currentUser.email;
+    }
+    document.getElementById('success-message').style.display = 'block';
+    setTimeout(() => {
+      window.location.href = 'user.html';
+    }, 1000);
   } catch (err) {
     errorMessage.textContent = 'Email sign-in failed: ' + err.message;
     errorMessage.style.display = 'block';
@@ -807,52 +750,8 @@ window.emailSignIn = async (e) => {
   }
 };
 
-// Logout function
-window.logout = async () => {
-  try {
-    await signOut(auth);
-    window.location.href = 'login.html';
-  } catch (error) {
-    console.error('Logout error:', error);
-    if (elements.dropdownEmail) {
-      elements.dropdownEmail.textContent = 'Error logging out';
-      elements.dropdownEmail.style.color = '#dc2626';
-    }
-  }
-};
-
-// Listen for auth state changes and update profile
-onAuthStateChanged(auth, (user) => {
-  if (user) {
-    updateUserProfile(user);
-    const usernameElement = document.getElementById('username');
-    if (usernameElement) {
-      usernameElement.textContent = user.displayName || user.email;
-    }
-    const successMessage = document.getElementById('success-message');
-    if (successMessage) {
-      successMessage.style.display = 'block';
-      setTimeout(() => {
-        window.location.href = 'user.html';
-      }, 1000);
-    } else {
-      // If not on login page, just update profile
-      updateUserProfile(user);
-    }
-  } else {
-    clearUserProfile();
-    // Redirect to login page only if not already there
-    if (window.location.pathname !== '/login.html') {
-      window.location.href = 'login.html';
-    }
-  }
-});
-
 // Attach emailSignIn to form submission
 document.getElementById('login-form').addEventListener('submit', window.emailSignIn);
-
-// Export auth for use in other scripts if needed
-export { auth };
     </script>
   </body>
 </html>
