--- a/signup.html
+++ b/signup.html
@@ -668,7 +668,7 @@ label {
         Already have an account? <a href="/login" class="text-gs-green hover:underline">Log In</a>
       </p>
     </div>
-
+<script>
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
 import {
   getAuth,
@@ -872,5 +872,6 @@ window.logout = async () => {
 
 // Export auth for use in other scripts if needed
 export { auth };
+  </script>
   </body>
 </html>
